tests/neg-macros/annot-MacroAnnotation-direct.scala
import scala.annotation.MacroAnnotation

@MacroAnnotation // error
def test = ()
